# chrono_simulation

./: .gitignore  my_note.md
UsefulDemoBackup/: demo_CH_functions.cpp
create_rosbag/launch/: create_rosbag.launch
create_rosbag/scripts/: main_extractGt.m
create_rosbag/src/: bag_time_export.cpp  main.cpp
matlab_scirpts/extractEvoResult/: main_loadEvo.m
matlab_scirpts/generateJson/: generateAccJsonFromXlsx.m  generateGyroJsonFromXlsx.m  generateTestAccJson.m  generateTestAccJsonFromXlsx.m  generateTestGyroJson.m  generateTestGyroJsonFromXlsx.m
matlab_scirpts/plotLidar/: plotLidar.m  plotTrajectoryError.m
ros_ws/src/: run_all.bash
ros_ws/src/create_rosbag/: CMakeLists.txt  package.xml
ros_ws/src/create_rosbag/config/: rviz.rviz
ros_ws/src/create_rosbag/launch/: create_rosbag.launch  create_rosbag_noise.launch  rviz.launch
ros_ws/src/create_rosbag/src/: create_bag_with_noise.cpp  main.cpp
template/: CMakeLists.txt
template_windows_vs/backup_codes/: CMakeLists.txt  liadr_imu_gator_output.cpp  lidar_gator_output.cpp  my_PID_path_follower.cpp  my_example.cpp  my_lidar.bk.cpp  my_terrain.cpp  my_vis.bk.cpp
template_windows_vs/configs/: Accelerometer.json  Lidar.json
template_windows_vs/matlab_scripts/: control_points.txt  forward_move.txt  generateCityRoadCurve.m  generateFormardControlPoints.m  generateTrajectoryControlPoints.m  generate_terrain.m  output.txt  plotData.m  trajectory_control_points.txt
template_windows_vs/matlab_scripts/terrain_generation/: main.m
template_windows_vs/src/: CMakeLists.txt  chrono_main.cpp  config.h  lidar_3Dmap_scan.cpp  my_environment.h  my_lidar.cpp  my_platform.h  my_sensors.cpp  my_sensors.h  vehicle_clean.cpp
template_windows_vs/srcOnServerBackup/: Lidar.json  chrono_main.cpp  config.h  my_environment.h  my_lidar.cpp  my_sensors.h
